--- a/client/index.html
+++ b/client/index.html
@@ -142,7 +142,7 @@
                                     <div class="card-footer border-0 bg-light">
                                         <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
                                         <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
-                                        <button @click="changeCategory('product', task.id)" class="btn text-info"><i class="fas fa-arrow-right"></i></button>
+                                        <button @click="changeCategory('todo', task.id)" class="btn text-info"><i class="fas fa-arrow-right"></i></button>
                                     </div>
                                 </div>
                             </div>
@@ -151,10 +151,10 @@
                     <div class="col-lg-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5>Product</h5>
+                                <h5>Todo</h5>
                             </div>
                             <div class="card-body bg-secondary">
-                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'product'" class="card">
+                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'todo'" class="card">
                                     <div class="card-body bg-white">
                                         <transition name="fade">
                                             <div v-show="getTaskById.title != ''" v-if="task.id == getTaskById.id" id="form-edit-task">
@@ -176,7 +176,7 @@
                                     <div class="card-footer border-0 bg-light">
                                         <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
                                         <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
-                                        <button @click="changeCategory('development', task.id)" class="btn text-info"><i
+                                        <button @click="changeCategory('doing', task.id)" class="btn text-info"><i
                                                 class="fas fa-arrow-right"></i></button>
                                     </div>
                                 </div>
@@ -186,10 +186,10 @@
                     <div class="col-lg-3">
                         <div class="card">
                             <div class="card-header">
-                                <h5>Development</h5>
+                                <h5>Doing</h5>
                             </div>
                             <div class="card-body bg-secondary">
-                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'development'" class="card">
+                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'doing'" class="card">
                                     <div class="card-body bg-white">
                                         <transition name="fade">
                                             <div v-show="getTaskById.title != ''" v-if="task.id == getTaskById.id" id="form-edit-task">
