--- a/client/index.html
+++ b/client/index.html
@@ -10,209 +10,12 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-  <link rel="stylesheet" href="src/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Kanban</title>
 </head>
 
 <body>
-  <div class="app"></div>
-  <!-- navbar -->
-  <!-- Mobile Navigation Bar -->
-  <div class="topnav">
-    <a href="javascript:void(0);" class="active col-xl" onclick="myFunction()">
-      <i href="#home" class="active fab fa-korvue fa-lg"> Kanban</i>
-    </a>
-    <div id="myLinks">
-      <a href="#">New Task</a>
-      <a href="#">Register</a>
-      <a href="#">Login</a>
-      <a href="#">Logout</a>
-    </div>
-  </div>
-
-  <!-- login -->
-  <section class="container-fluid" id="login">
-    <div class="row justify-content-center mt-5">
-      <div class="col-4 fas">
-        <h1 class="text-white fa-3x">Login</h1>
-        <form onsubmit="login(event)" class="text-white">
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="text" id="email" class="form-control" placeholder="input your email" autocomplete="email">
-          </div>
-          <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" id="password" class="form-control" placeholder="input your password"
-              autocomplete="current-password">
-          </div>
-          <button class="btn btn-dark">Login</button>
-        </form>
-        <div class="g-signin2" data-onsuccess="onSignIn"></div>
-      </div>
-    </div>
-  </section>
-
-  <!-- register -->
-  <section class="container-fluid" id="register">
-    <div class="row justify-content-center mt-5 text-white">
-      <div class="col-4 fas">
-        <h1 class="text-white fa-3x">Register</h1>
-        <form onsubmit="register(event)">
-          <div class="form-group">
-            <label form="name">Email</label>
-            <input type="email" id="req-email" class="form-control" placeholder="input your email" autocomplete="email">
-          </div>
-          <div class="form-group">
-            <label form="password">Password</label>
-            <input type="password" id="req-password" class="form-control" placeholder="input your password"
-              autocomplete="current-password">
-          </div>
-          <button class="btn btn-dark">Register</button>
-          <div class="justify-content-center">
-          </div>
-        </form>
-      </div>
-    </div>
-  </section>
-
-  <!-- kanban board -->
-  <div class="container-fluid pt-3">
-    <h3 class="font-weight-light text-white fab fa-7x">Kanban Board</h3>
-    <div class="row flex-row flex-sm-nowrap py-3">
-      <div class="col-sm-6 col-md-4 col-xl-3">
-        <div class="card bg-light">
-          <div class="card-body">
-            <h6 class="card-title text-uppercase text-truncate py-2">Backlog</h6>
-            <div class="items border border-light">
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Backlog</a>
-                  </div>
-                  <p>
-                    Deskripsi Backlog nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Backlog</a>
-                  </div>
-                  <p>
-                    Deskripsi Backlog nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Todo</a>
-                  </div>
-                  <p>
-                    Deskripsi Backlog nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4 col-xl-3">
-        <div class="card bg-light">
-          <div class="card-body">
-            <h6 class="card-title text-uppercase text-truncate py-2">To Do</h6>
-            <div class="items border border-light">
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Todo</a>
-                  </div>
-                  <p>
-                    Deskripsi Todo nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Todo</a>
-                  </div>
-                  <p>
-                    Deskripsi Todo nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4 col-xl-3">
-        <div class="card bg-light">
-          <div class="card-body">
-            <h6 class="card-title text-uppercase text-truncate py-2">Doing</h6>
-            <div class="items border border-light">
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Doing</a>
-                  </div>
-                  <p>
-                    Deskripsi Doing nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="col-sm-6 col-md-4 col-xl-3">
-        <div class="card">
-          <div class="card-body">
-            <h6 class="card-title text-uppercase text-truncate py-2">Done</h6>
-            <div class="items border border-light">
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Done</a>
-                  </div>
-                  <p>
-                    Deskripsi Done nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-              <div class="card mt-3">
-                <div class="card-body p-2">
-                  <div class="card-title">
-                    <a href="" class="lead font-weight-light">Judul Done</a>
-                  </div>
-                  <p>
-                    Deskripsi Done nanti disini.
-                  </p>
-                  <button class="btn btn-primary btn-sm">Edit</button>
-                  <button class="btn btn-primary btn-sm">Delete</button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div id="app"></div>
 
   <!-- font awesome -->
   <script src="https://kit.fontawesome.com/c662304f2f.js" crossorigin="anonymous"></script>
