--- a/client/index.html
+++ b/client/index.html
@@ -7,129 +7,9 @@
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <link rel="stylesheet" href="./style.css">
-    
 </head>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a class="navbar-brand" href="#">Logo YEUH!</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Kanban App Cuy!<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Add Task!</a>
-            </li>
-        </ul>
-        <ul class="navbar-nav ml-auto">
-            <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Sign Up</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Log Out</a>
-            </li>
-        </ul>
-    </div>
-</nav>
-
-
 <body>
-    <div class="container ml-4 mt-3">
-        <div class="baris">
-            <div class="col">
-                <div class="card card-luar" style="width: 18rem">
-                    <div class="card-body">
-                        <h5 class="card-title">Backlog</h5>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                                <p>Decription</p>
-                                <p>Assigned by: </p>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card card-luar" style="width: 18rem">
-                    <div class="card-body">
-                        <h5 class="card-title">Production</h5>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card card-luar" style="width: 18rem">
-                    <div class="card-body">
-                        <h5 class="card-title">In Progress</h5>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card card-luar" style="width: 18rem">
-                    <div class="card-body">
-                        <h5 class="card-title">Done</h5>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                        <div class="card task-card" style="width: 15rem">
-                            <div class="card-body dalam">
-                                <h5 class="card-title task-title">Task</h5>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+    <div id="app" style="margin-top: 20%;"></div>
+    <script src="/src/main.js"></script>   
 </body>
 </html>
