--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="google-signin-client_id" content="300714736469-s4d33v7bq72f28a96rp123o1o8ss5r0n.apps.googleusercontent.com">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -19,241 +20,7 @@
 
     <div class="" id="app" style="height: 100vh;">
 
-    <nav v-if="page !== 'login-page' && page !== 'register-page'" class="navbar navbar-expand-lg navbar-light bg-transparent border-bottom" >
-        <div class="container">
-        <a class="navbar-brand" href="">Kanban</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a @click.prevent="logout" href="" class="btn">Logout</a>
-            </li>
-          </ul>
-        </div>
-        </div>
-      </nav>
     
-    <div class="container">
-        <!-- Login Page -->
-        <section v-if="page == 'login-page'" class="login-page mt-5" id="login-page">
-            <div class="row mx-auto">
-                <div class="col-12">
-                    <div class="card" id="card-login-page">
-                        <div class="card-body text-center">
-                            <h3 class="card-text">SIGN IN</h3>
-                            <form @submit.prevent="login" class="">
-                                <div class="form-group mt-5">
-                                    <input v-model="userLogin.email"  type="email" class="form-control mx-auto" id="email" aria-describedby="emailHelp" placeholder="email address">
-                                </div>
-                                <div class="form-group mt-5">
-                                    <input v-model="userLogin.password" type="password" class="form-control mx-auto" id="password" placeholder="password">
-                                </div>
-                                <button  type="submit" class="mt-5 btn btn-login">SIGN IN</button>
-                            </form>
-                            <button class="btn mt-5" href="" v-on:click="changePage('register-page')">SIGN UP</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End Login Page -->
-
-        <!-- Register Page -->
-        <section v-else-if="page == 'register-page'" class="register-page mt-5" id="register-page">
-            <div class="row justify-content-center">
-                <div class="col-12">
-                    <div class="card">
-                        <div class="card-body text-center">
-                            <h3 class="card-text">SIGN UP</h3>
-                            <form @submit.prevent="register" class="">
-                                <div class="form-group mt-5">
-                                    <input v-model="userRegister.firstName" type="text" class="form-control mx-auto" id="first_name" placeholder="first name">
-                                </div>
-                                <div class="form-group mt-5">
-                                    <input v-model="userRegister.lastName" type="text" class="form-control mx-auto" id="last_name" placeholder="last name">
-                                </div>
-                                <div class="form-group mt-5">
-                                    <input v-model="userRegister.email" type="email" class="form-control mx-auto" id="register-email" aria-describedby="emailHelp" placeholder="email address">
-                                </div>
-                                <div class="form-group mt-5">
-                                    <input v-model="userRegister.password" type="password" class="form-control mx-auto" id="register-password" placeholder="password">
-                                </div>
-                                <button type="submit" class="mt-5 btn btn-login">SIGN UP</button>
-                            </form>
-                            <button class="btn mt-5" href="" @click="changePage('login-page')">SIGN IN</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- End Register Page -->
-
-        <!-- Home -->
-            <section v-else-if="page == 'home-page'" class="home-page mt-5" id="home-page">
-                <div v-if="errorMessage != ''" class="alert alert-danger alert-dismissible fade show" role="alert">
-                    {{errorMessage}}
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="row justify-content-center">
-                    <div class="col-lg-3">
-                        <div class="card d-flex flex-column">
-                            <div class="card-header">
-                                <h5>Backlog</h5>
-                                <div class="add-task">
-                                    <button class="btn" style="border-radius: 50%;" @click="show = !show" ><i class="fas fa-plus"></i></button>
-                                </div>
-                                <transition name="fade">  
-                                    <div v-show="show" class="mt-3" id="form-add-task">
-                                        <form @submit.prevent="addTask" action="" class="mt-3">
-                                            <div class="form-group">
-                                                <input v-model="taskAdd.title" placeholder="title" type="text" style="width: 100%;" class="form-control">
-                                            </div>
-                                            <button type="submit" style="border-radius: 50%;" class="btn"><i class="fas fa-save"></i></button>
-                                            <button type="reset" @click="show = !show" style="border-radius: 50%;" class="btn"><i class="far fa-window-close"></i></button>
-                                        </form>
-                                    </div>
-                                </transition>
-                            </div>
-                            <div class="card-body" id="card-tasks">
-                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'backlog'" class="card border-0">
-                                    <div class="card-body bg-white mt-3">
-                                        <transition name="fade">  
-                                            <div v-show="getTaskById.title != ''" v-if="task.id == getTaskById.id" id="form-edit-task">
-                                                <form @submit.prevent="editTitleTask(task.id)" action="">
-                                                    <div class="form-group">
-                                                        <input v-model="getTaskById.title" placeholder="title" type="text" style="width: 100%;" class="form-control">
-                                                    </div>
-                                                    <button type="submit" class="btn"><i class="fas fa-save"></i></button>
-                                                    <button type="reset" @click="getTaskById.title = !getTaskById.title" class="btn"><i
-                                                            class="far fa-window-close"></i></button>
-                                                </form>
-                                            </div>
-                                        </transition>
-                                        <h5 class="card-title">{{task.title}}</h5>
-                                      <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> {{task.User.firstName}} {{task.User.lastName}}</p>
-                                    </div>
-                                    <div class="card-footer border-0 bg-light">
-                                        <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
-                                        <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
-                                        <button @click="changeCategory('todo', task.id)" class="btn text-info"><i class="fas fa-arrow-right"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-header">
-                                <h5>Todo</h5>
-                            </div>
-                            <div class="card-body bg-secondary">
-                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'todo'" class="card">
-                                    <div class="card-body bg-white">
-                                        <transition name="fade">
-                                            <div v-show="getTaskById.title != ''" v-if="task.id == getTaskById.id" id="form-edit-task">
-                                                <form @submit.prevent="editTitleTask(task.id)" action="">
-                                                    <div class="form-group">
-                                                        <input v-model="getTaskById.title" placeholder="title" type="text" style="width: 100%;"
-                                                            class="form-control">
-                                                    </div>
-                                                    <button type="submit" class="btn"><i class="fas fa-save"></i></button>
-                                                    <button type="reset" @click="getTaskById.title = !getTaskById.title" class="btn"><i
-                                                            class="far fa-window-close"></i></button>
-                                                </form>
-                                            </div>
-                                        </transition>
-                                      <h5 class="card-title">{{task.title}}</h5>
-                                    <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> {{task.User.firstName}}
-                                        {{task.User.lastName}}</p>
-                                    </div>
-                                    <div class="card-footer border-0 bg-light">
-                                        <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
-                                        <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
-                                        <button @click="changeCategory('doing', task.id)" class="btn text-info"><i
-                                                class="fas fa-arrow-right"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-header">
-                                <h5>Doing</h5>
-                            </div>
-                            <div class="card-body bg-secondary">
-                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'doing'" class="card">
-                                    <div class="card-body bg-white">
-                                        <transition name="fade">
-                                            <div v-show="getTaskById.title != ''" v-if="task.id == getTaskById.id" id="form-edit-task">
-                                                <form @submit.prevent="editTitleTask(task.id)" action="">
-                                                    <div class="form-group">
-                                                        <input v-model="getTaskById.title" placeholder="title" type="text" style="width: 100%;"
-                                                            class="form-control">
-                                                    </div>
-                                                    <button type="submit" class="btn"><i class="fas fa-save"></i></button>
-                                                    <button type="reset" @click="getTaskById.title = !getTaskById.title" class="btn"><i
-                                                            class="far fa-window-close"></i></button>
-                                                </form>
-                                            </div>
-                                        </transition>
-                                      <h5 class="card-title">{{task.title}}</h5>
-                                    <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> {{task.User.firstName}}
-                                        {{task.User.lastName}}</p>
-                                    </div>
-                                    <div class="card-footer border-0 bg-light">
-                                        <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
-                                        <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
-                                        <button @click="changeCategory('done', task.id)" class="btn text-info"><i class="fas fa-arrow-right"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-3">
-                        <div class="card">
-                            <div class="card-header">
-                                <h5>Done</h5>
-                            </div>
-                            <div class="card-body bg-secondary">
-                                <div v-for="task in tasks" :key="task.id" v-show="task.category == 'done'" class="card">
-                                    <div class="card-body bg-white">
-                                        <transition name="fade">
-                                            <div v-show="getTaskById.title != ''" v-if="task.id == getTaskById.id" id="form-edit-task">
-                                                <form @submit.prevent="editTitleTask(task.id)" action="">
-                                                    <div class="form-group">
-                                                        <input v-model="getTaskById.title" placeholder="title" type="text" style="width: 100%;"
-                                                            class="form-control">
-                                                    </div>
-                                                    <button type="submit" class="btn"><i class="fas fa-save"></i></button>
-                                                    <button type="reset" @click="getTaskById.title = !getTaskById.title" class="btn"><i
-                                                            class="far fa-window-close"></i></button>
-                                                </form>
-                                            </div>
-                                        </transition>
-                                      <h5 class="card-title">{{task.title}}</h5>
-                                    <p class="card-text"><img class="" src="./assets/img/default.png" alt="profile" width="20px"> {{task.User.firstName}}
-                                        {{task.User.lastName}}</p>
-                                    </div>
-                                    <div class="card-footer border-0 bg-light">
-                                        <button @click="getById(task.id)" class="btn text-success"><i class="fas fa-edit"></i></button>
-                                        <button @click="deleteTask(task.id)" class="btn text-danger"><i class="fas fa-trash-alt"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        <!-- EndHome -->
-        </div>
     </div>
 
     <!-- Optional JavaScript -->
@@ -262,6 +29,7 @@
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/vue@2/dist/vue.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
     <script src="js/script.js"></script>
     <script src="src/main.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
