update google sign in key

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta
+    <!-- <meta
       name="google-signin-client_id"
       content="1000647865347-bsu8df3ks56fpvnc6q4tgbfmvbb8dqo2.apps.googleusercontent.com"
+    /> -->
+    <meta
+      name="google-signin-client_id"
+      content="987821488110-nvnbe6qu4969m1eq4302jajrfutm9hr7.apps.googleusercontent.com"
     />
+
     <link rel="stylesheet" href="lib/toasty/toasty.min.css" />
     <link
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
