--- a/client/index.html
+++ b/client/index.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="666040877350-56mid0g22iokhigjb8gk3ak32cesho5f.apps.googleusercontent.com">
+
     <title>Kanban</title>
     
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
@@ -10,6 +12,7 @@
 </head>
 <body>
     <div id="app" style="margin-top: 20%;"></div>
-    <script src="/src/main.js"></script>   
+    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="/src/main.js"></script> 
 </body>
 </html>
