--- a/client/index.html
+++ b/client/index.html
@@ -32,8 +32,7 @@
 
 	</div>
 	<script src="https://kit.fontawesome.com/efbbdd141c.js" crossorigin="anonymous"></script>
-	<script src="https://apis.google.com/js/platform.js" async defer></script>
-
+	<script src="https://apis.google.com/js/platform.js"  ></script>
 	<script src="./src/main.js"></script>
 </body>
 
