--- a/client/index.html
+++ b/client/index.html
@@ -27,7 +27,7 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js"></script>
     <script defer src="lib/toasty/toasty.min.js"></script>
     <script src="src/main.js"></script>
   </body>
