add complete registration modal

--- a/client/index.html
+++ b/client/index.html
@@ -3,10 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta
-      name="google-signin-client_id"
-      content="1000647865347-bsu8df3ks56fpvnc6q4tgbfmvbb8dqo2.apps.googleusercontent.com"
-    /> -->
     <meta
       name="google-signin-client_id"
       content="987821488110-nvnbe6qu4969m1eq4302jajrfutm9hr7.apps.googleusercontent.com"
@@ -20,6 +16,10 @@
 
     <title>Kanban</title>
     <link rel="stylesheet" href="src/css/style.css" />
+    <link
+      rel="stylesheet"
+      href="src/css/material-design-color-palette.min.css"
+    />
     <link rel="stylesheet" href="src/css/header.css" />
     <link rel="stylesheet" href="src/css/landing.css" />
     <link rel="stylesheet" href="src/css/modal.css" />
