--- a/client/index.html
+++ b/client/index.html
@@ -16,7 +16,7 @@
 </div>
   
 </body>
-<script src="./src/main.js"></script>
+<script type="module" src="./src/main.js"></script>
 <script src="https://apis.google.com/js/platform.js" async defer></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
