--- a/client/index.html
+++ b/client/index.html
@@ -30,6 +30,8 @@
   <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <!-- library google oauth -->
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <!-- google signin -->
+  <script src="https://apis.google.com/js/api:client.js"></script>
   <!-- vue -->
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script src="src/main.js"></script>
