--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://apis.google.com/js/platform.js" async defer></script>
+  <script src="https://kit.fontawesome.com/6e844b72b8.js" crossorigin="anonymous"></script>
   <script src="./src/main.js"></script>
 </body>
 
